--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pizzeria",
   "version": "0.0.1",
-  "author": "Leo",
+  "author": "Ionic Framework",
   "homepage": "http://ionicframework.com/",
   "private": true,
   "scripts": {
